Update Modal, update Btn, update project config - Add “skip chromatic” commit keywords - Add “skip tstests” commit keywords - Enable Storybook docs addon - Fix missing border bug for outline Btn - Add isFull prop for Modal - Update Modal stories - Fix bug where .modal-full CSS class doesn’t expand height for Modal content larger than viewport height - Add allowBgScroll prop which controls background scrolling - Fix bug where .modal-open CSS class remains on body even after Modal unmount

--- a/src/components/Btn/_index.scss
+++ b/src/components/Btn/_index.scss
@@ -12,6 +12,7 @@
 
   &.outline {
     --bg: unset;
+    --border: 0.2rem solid #{color.$primary};
     --color: #{color.$primary};
 
     background: var(--bg);
@@ -19,8 +20,6 @@
     position: relative;
 
     &::before {
-      --border: 0.2rem solid color.$primary;
-
       border: var(--border);
       bottom: 0;
       content: '';
