--- a/src/components/Modal/_index.scss
+++ b/src/components/Modal/_index.scss
@@ -37,8 +37,8 @@ body.modal-open {
   }
 
   &.modal-full {
-    height: 100vh;
     margin: 0;
+    min-height: 100vh;
     width: 100vw;
   }
 
